--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
@@ -26,7 +26,7 @@
 			<div id="functions-area">
 				<!-- Go back Style -->
 				<a class="goback" data-bind="ntsLinkButton: { }, click: backTopAScreen">#{i18n.getText('JHC002_B1_1')}</a>
-				<button class="proceed" tabindex="1" data-bind="click: save">#{i18n.getText('JHC002_B1_2')}</button>
+				<button class="proceed" tabindex="1" data-bind="click: save, enable: $root.errors.isEmpty()">#{i18n.getText('JHC002_B1_2')}</button>
 			</div>
 			<div id="contents-area">
 				<div id="main-area">
