--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/c/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/c/index.xhtml
@@ -26,7 +26,7 @@
 			</div>
 			<div id="functions-area-bottom">
 				<button class="proceed x-large" data-bind="click: isNotice">#{i18n.getText('JHC002_C3_1')}</button>
-				<button data-bind="click: notNotice">#{i18n.getText('JHC002_C3_2')}</button>
+				<button data-bind="click: notNotice" id="notNotice">#{i18n.getText('JHC002_C3_2')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
